# openad-plugin-tutorial

./: .gitignore  README.md  Untitled.ipynb  fingerprint-genberator.ipynb  fingerprint.json  pyproject.toml
openad_plugin_fingerprint/: main.py  plugin_grammar_def.py  plugin_metadata.yaml  plugin_params.py
openad_plugin_fingerprint/commands/calculate_fp/: calculate_fp.py  command.py  description.txt
